Complete api login

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "super secrete key by khizar bajwa"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
